Fixed navbar overflow on scroll position fixed
Fixed the bug of the navbar stretching out of the page when scroll and made position to be fixed, and also a little code optimization for the applications forms pages

--- a/Html templates/stylesheets/contact-header.css
+++ b/Html templates/stylesheets/contact-header.css
@@ -1,19 +1,3 @@
-/*specifing the grid view*/
-:root {
-  --col-1: 8.3%;
-  --col-2: calc(8.3% * 2);
-  --col-3: calc(8.3% * 3);
-  --col-4: calc(8.3% * 4);
-  --col-5: calc(8.3% * 5);
-  --col-6: calc(8.3% * 6);
-  --col-7: calc(8.3% * 7);
-  --col-8: calc(8.3% * 8);
-  --col-9: calc(8.3% * 9);
-  --col-10: calc(8.3% * 10);
-  --col-11: calc(8.3% * 11);
-  --col-12: 100%;
-}
-
 .contact-header {
   width: var(--col-12);
   height: 100vh;
@@ -215,10 +199,6 @@ input[type="submit"]:hover {
 
 
 @media (min-width: 1201px) {
-  .header-content {
-    position: relative;
-  }
-
   .form h1 {
     font-size: 2rem;
     margin: 0px 0px 20px;
