--- a/Html templates/stylesheets/foundation.page.css
+++ b/Html templates/stylesheets/foundation.page.css
@@ -1,20 +1,3 @@
-/* foundation page designs for mobile devices */
-/*specifing the grid view*/
-:root {
-  --col-1: 8.3%;
-  --col-2: calc(8.3% * 2);
-  --col-3: calc(8.3% * 3);
-  --col-4: calc(8.3% * 4);
-  --col-5: calc(8.3% * 5);
-  --col-6: calc(8.3% * 6);
-  --col-7: calc(8.3% * 7);
-  --col-8: calc(8.3% * 8);
-  --col-9: calc(8.3% * 9);
-  --col-10: calc(8.3% * 10);
-  --col-11: calc(8.3% * 11);
-  --col-12: 100%;
-}
-
 .foundation-header {
   width: var(--col-12);
   height: 100vh;
