--- a/Html templates/stylesheets/nav.css
+++ b/Html templates/stylesheets/nav.css
@@ -1,19 +1,3 @@
-/*specifing the grid view*/
-:root {
-  --col-1: 8.3%;
-  --col-2: calc(8.3% * 2);
-  --col-3: calc(8.3% * 3);
-  --col-4: calc(8.3% * 4);
-  --col-5: calc(8.3% * 5);
-  --col-6: calc(8.3% * 6);
-  --col-7: calc(8.3% * 7);
-  --col-8: calc(8.3% * 8);
-  --col-9: calc(8.3% * 9);
-  --col-10: calc(8.3% * 10);
-  --col-11: calc(8.3% * 11);
-  --col-12: 100%;
-}
-
 *,*::after,*::before {
   box-sizing: border-box;
   margin: 0;
@@ -21,7 +5,7 @@
 }
 
 body {
-  max-width: 1500px;
+  max-width: 1440px;
   margin: auto;
   font-family: sans-serif;
   overflow-x: hidden;
@@ -34,7 +18,6 @@ body {
   width: var(--col-12);
   position: absolute;
   top: 0%;
-  left: 0%;
 }
 
 nav {
@@ -74,7 +57,7 @@ nav ul {
 }
 
 #position {
-  width: var(--col-12);
+  max-width: 1440px;
   background: #fff;
   position: fixed;
   border-bottom: 1px solid #000033;
@@ -86,7 +69,6 @@ nav ul {
   -ms-transition: 300ms;
   -o-transition: 300ms;
   top: 0%;
-  right: 0%;
 }
 
 #position:hover span {
